<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Picture Trainer</string>
    
    <string name="statistic">Statistic</string>
    <string name="right">right</string>
    <string name="wrong">wrong</string>
    <string name="todo">to do</string>
    
    <string name="dictionaryPicture">Picture</string>
    <string name="dictionaryName">Fruits</string>
    <string name="next">&gt;</string>
    
    <string name="bla">abc</string>
    <string name="bla123">123</string>
    
    <string name="rightToast">Right.</string>
    <string name="wrongToast">!!! WRONG !!!</string>
    <string name="wrongToastDetails">Expected: %s</string>
    <string name="finishedToast">*** Complete ***</string>
    <string name="finishedToastDetails">Congratulation, you have successfully solved the training set.</string>
    
    <string name="count">count: %d</string>
    <string name="edit">edit</string>
    <string name="training">training</string>
    <string name="multipleChoice">MC</string>
    <string name="nodata">No dictionaries present</string>
    
    <string name="dictionaryPictureLabel">dictionary picture</string>
    <string name="dictionaryNameLabel">dictionary name</string>
    <string name="picture">picture</string>
    <string name="addVocable">add vocable</string>
	<string name="deleteVocable">delete vocable</string>
    <string name="addDictionary">add dictionary</string>
	<string name="deleteDictionary">delete dictionary</string>
    <string name="savingDictionary">Saving dictionary.</string>
    <string name="deletingDictionary">Deleting dictionary.</string>
    <string name="confirmDeleteDictionaryTitle">Delete dictionary</string>
    <string name="confirmDeleteDictionaryText">You are deleting that dictionary. Are you sure?</string>
    
    <string name="openConfig">configuration</string>
    <string name="translationDirection">translation direction</string>
    <string name="translateForward">word ← </string>
    <string name="translateBidrectional">word ↔ </string>
    <string name="translateBackward">word → </string>
    <string name="playSounds">play sounds</string>
    <string name="resetDatabase">reset database</string>
    
    <string name="confirmResetDatabaseTitle">Reset database</string>
    <string name="confirmResetDatabaseText">You are recovering default dictionaries. Are you sure? Warning: all current dictionaries will be lost!</string>
    <string name="resettingDatabase">Resetting database.</string>
    
    <string name="selectPicture">Select Picture</string>
    <string name="errorSavingPicture">Error saving picture.</string>
    <string name="toggleSound">toggle sound</string>

    <string name="exportToExternalStorage">export to external storage</string>
    <string name="importFromExternalStorage">import from external storage</string>
    
    <string name="errorExportingDictionary">Error exporting dictionary to external storage.</string>
    <string name="exportedDictionary">Exported dictionary to external storage file %s.</string>
    
    <string name="title_activity_import">Import from external storage</string>
    <string name="selectFileToImport">Select file to import:</string>
    <string name="deleteFile">delete file</string>
    <string name="file">DICT_123.pt</string>
    <string name="importingDictionary">Importing dictionary.</string>
    <string name="errorImportingDictionary">Error importing dictionary.</string>
    	
</resources>
