<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context="${relativePackage}.ConfigActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translationDirection" />

    <RadioGroup
        android:id="@+id/radioGroupDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp" >

        <RadioButton
            android:id="@+id/radioDirection1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:drawableRight="@drawable/ic_default_picture"
            android:onClick="onRadioButtonClicked"
            android:text="@string/translateForward" />

        <RadioButton
            android:id="@+id/radioDirection2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_default_picture"
            android:onClick="onRadioButtonClicked"
            android:text="@string/translateBidrectional" />

        <RadioButton
            android:id="@+id/radioDirection3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_default_picture"
            android:onClick="onRadioButtonClicked"
            android:text="@string/translateBackward" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxPlaySound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:drawableRight="@drawable/ic_action_sound"
        android:onClick="onCheckBoxClicked"
        android:text="@string/playSounds" />

    <Button
        android:id="@+id/buttonResetDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:onClick="onClickResetDatabase"
        android:text="@string/resetDatabase" />

</LinearLayout>