<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context="${relativePackage}.DictionaryListActivity" >

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
    	android:orientation="horizontal"
        >
	    <ImageView
	        android:id="@+id/listItemPicture"
	        android:layout_width="100dp"
	        android:layout_height="100dp"
        	android:layout_margin="3dp"
	    	android:layout_gravity="left|center_vertical"
	        android:scaleType="centerInside"
	        android:contentDescription="@string/picture"
	        android:src="@drawable/ic_launcher" >
	    </ImageView>
	    
	    <TextView
	        android:id="@+id/listItemName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	    	android:layout_margin="3dp"
	    	android:layout_gravity="left|center_vertical"
	        android:text="@string/dictionaryName"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <TextView
        android:id="@+id/listItemCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/count"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonEdit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_edit"
            android:text="@string/edit"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonTraining"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_training"
            android:text="@string/training"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonMultipleChoice"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_mc"
            android:text="@string/multipleChoice"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>