<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewDictionaryPictureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_gravity="left|center_vertical"
            android:layout_margin="3dp"
            android:text="@string/dictionaryPictureLabel"
            android:textAppearance="?android:attr/textAppearanceSmall" />

	    <ImageButton
	        android:id="@+id/imageButtonDictionaryPicture"
	        android:layout_width="100dp"
	        android:layout_height="100dp"
        	android:layout_gravity="left|center_vertical"
	        android:scaleType="centerInside"
	        android:onClick="onClick"
	        android:contentDescription="@string/picture"
	        android:src="@drawable/ic_launcher" >
	    </ImageButton>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewDictionaryNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
        	android:layout_gravity="left|center_vertical"
            android:text="@string/dictionaryNameLabel"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextDictionaryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
        	android:layout_gravity="left|center_vertical"
            android:ems="4"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="afterDescendants" />

</LinearLayout>